fixed dark mode

--- a/src/universe.css
+++ b/src/universe.css
@@ -1,5 +1,5 @@
 .sidebar_listbox {
-  background-color: #F5F5F5;
+  /*background-color: #F5F5F5;*/
 }
 
 .sidebar_listbox > row {
